--- a/Labfiles/Starter/DP-200.6/DataGenerator/telcodatagen.exe.config
+++ b/Labfiles/Starter/DP-200.6/DataGenerator/telcodatagen.exe.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
-    <add key="EventHubName" value="ctoo-phoneanalysis-eh"/>
-    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://ctoo-phoneanalysis-ehn.servicebus.windows.net/;SharedAccessKeyName=ctoo-phoneanalysis-eh-sap;SharedAccessKey=xMmg8/nGj3KFkM49hahC3JNw5ia/Vb1O+HcDBjzNzo4="/>
+    <add key="EventHubName" value="dbrand-phoneanalysis-eh"/>
+    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://dbrand-phoneanalysis-ehn.servicebus.windows.net/;SharedAccessKeyName=dbrand-phoneanalysis-eh;SharedAccessKey=uVqMCg0svpRlWPN6ZJz/YuzZjUPg82Of9KLal9IeqsQ="/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup>
 <system.serviceModel>
